--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,49 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
 
-# Dependency directories
+# dependencies
+
 /node_modules
-jspm_packages/
 
-# Distribution directories
-dist/
+/.pnp
 
-# Typescript v1 declaration files
-typings/
+.pnp.js
 
-# Optional npm cache directory
-.npm
 
-# Optional eslint cache
-.eslintcache
 
-# Optional REPL history
-.node_repl_history
+# testing
 
-# Output of 'npm pack'
-*.tgz
+/coverage
 
-# Yarn Integrity file
-.yarn-integrity
+
+
+# production
+
+/build
+
+
+
+# misc
+
+.DS_Store
+
+.env.local
+
+.env.development.local
+
+.env.test.local
+
+.env.production.local
+
+.env
+
+.node_modules
+
+
+
+npm-debug.log*
+
+yarn-debug.log*
+
+yarn-error.log*
