--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@emailjs/browser": "^3.7.0",
     "@mui/icons-material": "^5.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,6 +11,9 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.23.4",
     "axios": "^0.20.0",
+    "html-react-parser": "^3.0.4",
+    "jodit-react": "^1.3.21",
+    "quill": "^1.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.4.0",
