--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.23.4",
-    "axios": "^0.20.0",
+    "axios": "^1.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.4.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
