--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.23.4",
     "axios": "^1.1.2",
+    "qr-scanner": "^1.4.1",
+    "qrcode.react": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.4.0",
     "react-password-strength-bar": "^0.4.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
