--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-charts": "^4.0.0",
     "react-icons": "^4.4.0",
     "react-password-strength-bar": "^0.4.1",
     "react-qr-reader": "^3.0.0-beta-1",
