--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.23.4",
     "axios": "^1.1.2",
+    "file-saver": "^2.0.5",
     "qr-scanner": "^1.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-charts": "^4.0.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.4.0",
     "react-password-strength-bar": "^0.4.1",
     "react-qr-reader": "^3.0.0-beta-1",
@@ -25,7 +27,8 @@
     "react-uuid": "^2.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
