--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "antd": "^4.23.4",
     "axios": "^1.1.2",
     "react": "^16.13.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^16.13.1",
     "react-export-table-to-excel": "^1.0.6",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.4.0",
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^7.2.1",
